--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "foundation.min.css";
 .m-grid{
   width: 1200px;
   height: 800px;
@@ -5,12 +6,4 @@
 }
 table{
   table-layout: fixed;
-}
-span{
-  height: 100px;
-  width: 200px;
-}
-th,td{
-  min-width: 200px;
-  text-align: center;
 }
